Switching default preface to `smartthings` instead of `/smartthings` but leaving backwards compatibility (fixes #10) Adding saving of history to disk, to prevent startup spam (partial fix for #9) Do not send level if current state is "off" (fixes #9) Resubscribe to topics if connection with MQTT is lost (fixes #11)

--- a/.jscsrc
+++ b/.jscsrc
@@ -9,5 +9,8 @@
         "beforeOpeningCurlyBrace": true,
         "beforeOpeningRoundBrace": true
     },
-    "maximumLineLength": 120
+    "maximumLineLength": 120,
+    "excludeFiles": [
+        "artifacts/**"
+    ]
 }
