--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "MQTTBridge",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Bridge between SmartThings and an MQTT broker",
   "main": "server.js",
   "scripts": {
@@ -35,6 +35,7 @@
     "jsonfile": "^2.2.3",
     "mqtt": "^1.7.0",
     "request": "^2.65.0",
+    "semver": "^5.1.0",
     "winston": "^2.0.0"
   },
   "devDependencies": {
