Make it much more Node friendly!
 - Bin file for running the service
 - Name is correct
 - Dockerfile installs JUST the production packages
 - Port is customizable

--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,6 @@ mqtt:
     host: mqtt
     # Preface for the topics $PREFACE/$DEVICE_NAME/$PROPERTY
     preface: smartthings
+
+# Port number to listen on
+port: 8080
