--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "MQTTBridge",
+  "name": "smartthings-mqtt-bridge",
   "version": "1.1.2",
   "description": "Bridge between SmartThings and an MQTT broker",
   "main": "server.js",
+  "bin": {
+    "smartthings-mqtt-bridge": "./bin/smartthings-mqtt-bridge"
+  },
   "scripts": {
     "pretest": "npm run hint && npm run style",
     "test": "jenkins-mocha",
