enabling docker hub builds for Raspberry Pi

--- a/Dockerfile-rpi
+++ b/Dockerfile-rpi
@@ -1,5 +1,7 @@
-FROM hypriot/rpi-node:4
+FROM ma314smith/rpi2-node-qemu:4
 MAINTAINER St. John Johnson <st.john.johnson@gmail.com> and Jeremiah Wuenschel <jeremiah.wuenschel@gmail.com>
+
+RUN [ "cross-build-start" ]
 
 # Create our application direcory
 RUN mkdir -p /usr/src/app
@@ -23,3 +25,5 @@ EXPOSE 8080
 
 # Run the service
 CMD [ "npm", "start" ]
+
+RUN [ "cross-build-end" ]
