--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 ---
 mqtt:
     # Specify your MQTT Broker's hostname or IP address here
-    host: mqtt
-    # Preface for the topics $PREFACE/$DEVICE_NAME/$PROPERTY
+  host: mqtt://localhost
+
+  # Preface for the topics $PREFACE/$DEVICE_NAME/$PROPERTY
     preface: smartthings
 
     # The write and read suffixes need to be different to be able to differentiate when state comes from SmartThings or when its coming from the physical device/application
@@ -16,11 +17,15 @@ mqtt:
     # state_write_suffix: set_state
 
     # Suffix for the command topics $PREFACE/$DEVICE_NAME/$PROPERTY/$COMMAND_SUFFIX
+  # your physical device or application should write to this topic to execute commands in SmartThings devices that support them
     # command_suffix: cmd
 
     # Other optional settings from https://www.npmjs.com/package/mqtt#mqttclientstreambuilder-options
     # username: AzureDiamond
     # password: hunter2
+
+  # MQTT retains state changes be default, retain mode can be disabled:
+  # retain: false
 
 # Port number to listen on
 port: 8080
